# suckless-dot

./: README.md  bootstrap.sh  dot.sh  git_sync_utils.sh  install.sh  install_deps.sh  install_deps_src.sh  pkg_manager_utils.sh  ubuntu_cfg  update_deps.sh  update_deps_src.sh
etc/: vimrc
home/e/: .bashrc  .xinitrc  .xsession
home/e/.config/: sxwmrc
home/e/.config/neofetch/: config.conf
home/e/.config/nvim/: lazy-lock.json
home/e/.config/vifm/: vifmrc
home/e/.config/yazi/: theme.toml  yazi.toml
home/e/.de/anifetch/: README.md  pyproject.toml  ruff.sh
home/e/.de/anifetch/src/anifetch/: __init__.py  __main__.py  anifetch-static-resize2.sh  cli.py  core.py  utils.py
home/e/.de/anifetch/tools/: benchmark.py
home/e/.de/dwm/: config.def.h  de.sh
home/e/.de/st/: config.def.h  config.h
home/e/.de/st-graphics/: config.h
home/e/.de/sxwm/: sxwm
home/e/.de/sxwm/src/: defs.h
home/e/.de/warp/: Dockerfile  docker-compose.yml  start-warp.sh
home/e/de/dwm/: config.h  de.sh  dwm  dwm.c
home/e/de/feh/: config.mk
home/e/de/st/: config.h  st  st.c  x.c
usr/share/fonts/Agave/: README.md
usr/share/fonts/Inconsolata/: README.md
usr/share/fonts/Monofur/: README.md
usr/share/fonts/UbuntuMono/: README.md
usr/share/xsessions/: dwm.desktop
